--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,8 +41,20 @@ input[type=password], select {
 }
 
 .orglist {
-  /* width: 10rem; */
-  /* position:absolute; */
-  /* left:ce; */
-  /* position: center; */
+  margin: auto;
+  width: 15%;
+  /* border: 3px solid green; */
+  padding: 10px;
+  text-align: left;
+}
+
+.orgButton {
+  margin: auto;
+  text-align: right;
+  color: blue;
+  text-decoration: underline;
+}
+
+.orgButton:hover {
+  color:darkblue
 }
