--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 1rem;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+table {
+  justify-content: center;
+  border-collapse: collapse;
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 5rem;
+}
+
+th,
+td {
+  border: 1px solid #ffffff;
+  text-align: left;
+  padding: 4px;
+  font-size: 18px;
+}
+
+th {
+  background-color: rgb(117, 201, 250);
+}
+
+td {
+  background-color: rgb(205, 235, 253);
+}
+
+table.form {
+  display: flex;
+  gap: 5px;
+}
+
+table.form td:last-child {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+table.form * {
+  font-size: 28px;
+}
