--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,6 +87,36 @@ input[type=password], select {
   color: rgb(122, 122, 122);
 }
 
+.navBarAccountLink {
+  position: absolute;
+  display: inline;
+  float: right;
+  right: 8rem;
+  top: 26%;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 700;
+  text-decoration: none;
+  color: rgb(122, 122, 122);
+}
+
+.navBarAccountLink:hover {
+  color: #005499;
+}
+
 .navBarLogoutLink:hover {
   color: #005499;
+}
+
+.EditProfile {
+  position: absolute;
+  width:100%;
+  height: 100%;
+  background-color: white;
+}
+
+.EditProfile .Signup{
+  position:relative;
+  margin:auto;
+  justify-content: center;
 }
